Enunciado de 2019/1/MAT1203/15

--- a/2019/1/MAT1203/15/enunciado.tex
+++ b/2019/1/MAT1203/15/enunciado.tex
@@ -422,6 +422,18 @@ entonces $c_{23} = -\dfrac{56}{9}$
 	0 & 0 & -1
 	\end{bmatrix}$$
 	determine usando directamente esta factorización la tercera fila de $A^{-1}$.
+\item Sea $A \in M_4 (\R)$ tal que $|A|=5$, encuentre
+\begin{tasks}(4)
+\task $|2^3A|$
+\task $|A^5|$
+\task $|-A|$
+\task $||A|A^{-1}|$
+\end{tasks}
+\item Sea $A$ una matriz de $4\times 4$, tal que $det(A) = \alpha \neq 0$
+\begin{enumerate}[a)]
+\item Calcule  $det(5A)+det(3A^{-1})$ en terminos de $\alpha$.
+\item Se sabe que $det(Adj(A))=8$. Calcule $\alpha$.
+\end{enumerate}
 \item Sea $A$ una matriz de $n \times n$ definida por
 	$$a_{i,j} = 
 	\begin{cases}
