--- a/2019/1/MAT1203/15/solucion.tex
+++ b/2019/1/MAT1203/15/solucion.tex
@@ -2525,6 +2525,51 @@ La tercera fila de $A^{-1}$ es la tercera columna transpuesta de $(A^T)^{-1}$, e
 		-1 \\ 1 \\ 1
 		\end{pmatrix}$
 \end{solucion}
+\item Sea $A \in M_4 (\R)$ tal que $|A|=5$, encuentre
+\begin{tasks}(4)
+\task $|2^3A|$
+\task $|A^5|$
+\task $|-A|$
+\task $||A|A^{-1}|$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item $|2^3A| = (2^3)^4|A| = 2^{12}\cdot 5$
+\item $|A^5| = |AAAAA| = |A||A||A||A||A| = |A|^5 = 5^5$
+\item $|-A| = (-1)^4|A| = |A| = 5$
+\item $||A|A^{-1}| = |5A^{-1}| = 5^4|A^{-1}| = 5^4\dfrac{1}{|A|} = \dfrac{5^4}{5} = 5^3 = 125$
+\end{enumerate}
+\end{solucion}
+\item Sea $A$ una matriz de $4\times 4$, tal que $det(A) = \alpha \neq 0$
+\begin{enumerate}[a)]
+\item Calcule  $det(5A)+det(3A^{-1})$ en terminos de $\alpha$.
+\item Se sabe que $det(Adj(A))=8$. Calcule $\alpha$.
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item Calcule  $det(5A)+det(3A^{-1})$ en terminos de $\alpha$.
+			
+			En primer lugar,
+			$$det(5A) = 5^4det(a) = 5^4\alpha = 625 \alpha$$
+			En segundo lugar,
+			$$det(3A^{-1}) = 3^4det(A^{-1}) = 3^4 \dfrac{1}{\alpha} = \dfrac{81}{\alpha}$$
+			Finalmente,
+			$$det(5A)+det(3A^{-1}) = 625 \alpha + \dfrac{81}{\alpha}$$
+\item Se sabe que $det(Adj(A))=8$. Calcule $\alpha$.
+			
+			Recordemos que
+			$$A\ Adj(A) = det(A) I$$
+			Apliquemos $det$ a ambos lados de la igualdad,
+			$$det(A\ Adj(A)) = det(det(A) I)$$
+			$$det(A)\ det(Adj(A)) = det(A)^4\ det(I)$$
+			$$det(Adj(A)) = det(A)^3$$
+			$$det(A) = \sqrt[3]{det(Adj(A))}$$
+			$$det(A) = \sqrt[3]{8}$$
+			$$det(A) = 2$$
+\end{enumerate}
+\end{solucion}
 \item Sea $A$ una matriz de $n \times n$ definida por
 	$$a_{i,j} = 
 	\begin{cases}
