Enunciado de 2019/1/MAT1203/15

--- a/2019/1/MAT1203/15/enunciado.tex
+++ b/2019/1/MAT1203/15/enunciado.tex
@@ -434,6 +434,12 @@ entonces $c_{23} = -\dfrac{56}{9}$
 \item Calcule  $det(5A)+det(3A^{-1})$ en terminos de $\alpha$.
 \item Se sabe que $det(Adj(A))=8$. Calcule $\alpha$.
 \end{enumerate}
+\item Sea $P$ el paralelepípedo con un vertice en el origen y vertices adyacentes en $(1,4,0)$, $(-2,-5,2)$, $(-1,2,-1)$
+\begin{enumerate}[a)]
+\item Determinar el volumen de $P$.
+\item Se define $T: \R^3 \ra \R^3$ como la transformación lineal definida por $$T(x,y,z)=(x+y,y+z,x-z)$$
+		Calcule el volumen de $T(P)$.
+\end{enumerate}
 \item Sea $A$ una matriz de $n \times n$ definida por
 	$$a_{i,j} = 
 	\begin{cases}
@@ -452,5 +458,9 @@ entonces $c_{23} = -\dfrac{56}{9}$
 \item Sean $v_1,v_2,v_3,v_4 \in \R^4$, encuentre el $|A|$ si\\
 $A=[v_1-v_3+v_4 \;\;\;\;-v_2-v_3 \;\;\;\; v_3-v_1
 \;\;\;\;v_1+v_2+2v_4 ]\in M_4 (\R)$
+\item Determine la segunda columna de la inversa de $A = \left[ \begin{array}{rrr} 2&1&0\\ 0&1&2\\ 1&2&0 \end{array} \right]$ utilizando el metodo de cramer.
+\item Sea $V = \mathbb{P}_2$ el espacio vectorial de los polinomios con coeficientes reales de grado menor o igual a 2. Demuestre que el conjunto
+	$$U=\{p(x) \in V : p(1) + p(0) = p(-1)\}$$
+	Demuestre que $U$ es subespacio de $V$.
 \end{preguntas}
 \end{document}
