--- a/2019/1/MAT1203/15/solucion.tex
+++ b/2019/1/MAT1203/15/solucion.tex
@@ -1501,6 +1501,11 @@ $$B = \begin{bmatrix}
 0 & 1
 \end{bmatrix}$$
 \end{solucion}
+\item Sea $A$ una matriz de $n \times n$ tal que existe una matriz $B \neq 0$ tal que $AB = 0$.\\
+Demuestre que $A$ no es invertible.
+\begin{solucion}
+Como por lo menos alguna de las columnas de $B$ es $b_i \neq \vec{0}$, la ecuación $Ax = 0$ posee una solución no trivial $x = b_i$, por lo que no puede ser invertible, ya que sus columnas son $LD$
+\end{solucion}
 \item Sea $T: \R^7 \ra \R^9$ una transformación lineal. Suponga que el conjunto $\{u,v\}$ es linealmente independiente en $\R^7$ pero $\{T(u), T(v)\}$ es linealmente dependiente. Demuestre que la ecuación $T(x)=0$ admite soluciones no triviales.
 \begin{solucion}
 Como el conjunto $\{T(u), T(v)\}$ es $LD$, existen $\alpha, \beta \neq 0$, tales que 
@@ -2635,6 +2640,39 @@ La tercera fila de $A^{-1}$ es la tercera columna transpuesta de $(A^T)^{-1}$, e
 			$$V(T(P)) = |det(A_P)| \cdot |det(A_T)| = 15 \cdot 0 = 0$$
 \end{enumerate}
 \end{solucion}
+\item Sea $A$ un matriz tal que
+$$A^3 = 
+\begin{bmatrix}
+2 & 0 & 2\\
+-1 & 1 & 2\\
+2 & -1 & -1
+\end{bmatrix}$$
+\begin{enumerate}[a)]
+\item Calcule el determinante de la matriz $A^3$ mediante desarrollo por cofactores.
+\item Demuestre que $A$ no es invertible.
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item Calcule el determinante de la matriz $A^3$ mediante desarrollo por cofactores.\\
+\\
+$$|A^3| = \left|\begin{bmatrix}
+2 & 0 & 2\\
+-1 & 1 & 2\\
+2 & -1 & -1
+\end{bmatrix}\right| = 2\left|\begin{bmatrix}
+1 & 2\\
+-1 & -1
+\end{bmatrix}\right| + 2\left|\begin{bmatrix}
+1 & 2\\
+-1 & -1
+\end{bmatrix}\right| = 2 - 2 = 0$$
+\item Demuestre que $A$ no es invertible.\\
+\\
+$$|A^3| = 0 \ra |A|^3 = 0 \ra |A| = 0$$
+Por lo que la matriz no es invertible.
+\end{enumerate}
+\end{solucion}
 \item Sea $A$ una matriz de $n \times n$ definida por
 	$$a_{i,j} = 
 	\begin{cases}
@@ -2790,39 +2828,6 @@ $$x = \begin{pmatrix}
 \end{pmatrix}$$
 Que corresponde a la segunda columna de la inversa de $A$.
 \end{solucion}
-\item Sea $A$ un matriz tal que
-$$A^3 = 
-\begin{bmatrix}
-2 & 0 & 2\\
--1 & 1 & 2\\
-2 & -1 & -1
-\end{bmatrix}$$
-\begin{enumerate}[a)]
-\item Calcule el determinante de la matriz $A^3$ mediante desarrollo por cofactores.
-\item Demuestre que $A$ no es invertible.
-\end{enumerate}
-\begin{solucion}
-
-\begin{enumerate}[a)]
-\item Calcule el determinante de la matriz $A^3$ mediante desarrollo por cofactores.\\
-\\
-$$|A^3| = \left|\begin{bmatrix}
-2 & 0 & 2\\
--1 & 1 & 2\\
-2 & -1 & -1
-\end{bmatrix}\right| = 2\left|\begin{bmatrix}
-1 & 2\\
--1 & -1
-\end{bmatrix}\right| + 2\left|\begin{bmatrix}
-1 & 2\\
--1 & -1
-\end{bmatrix}\right| = 2 - 2 = 0$$
-\item Demuestre que $A$ no es invertible.\\
-\\
-$$|A^3| = 0 \ra |A|^3 = 0 \ra |A| = 0$$
-Por lo que la matriz no es invertible.
-\end{enumerate}
-\end{solucion}
 \item Sea $V = \mathbb{P}_2$ el espacio vectorial de los polinomios con coeficientes reales de grado menor o igual a 2. Demuestre que el conjunto
 	$$U=\{p(x) \in V : p(1) + p(0) = p(-1)\}$$
 	Demuestre que $U$ es subespacio de $V$.
@@ -2866,6 +2871,27 @@ Para demostrar que $U$ es un subespacio vectorial, debemos ver que sea no vacío
 		
 		Entonces, tenemos que $U$ es un subespacio de $V$.
 		$$\blacksquare$$
+\end{solucion}
+\item La matriz $A = \begin{bmatrix}
+	1 & 3 & 4 & -1 & 2\\
+	2 & 6 & 6 & 0 & -3\\
+	3 & 9 & 3 & 6 & -3\\
+	3 & 9 & 0 & 9 & 0
+	\end{bmatrix}$ es equivalente por filas a $B = \begin{bmatrix}
+	1 & 3 & 4 & -1 & 2\\
+	0 & 0 & 1 & -1 & 1\\
+	0 & 0 & 0 & 0 & -8\\
+	0 & 0 & 0 & 0 & 0
+	\end{bmatrix}$. Sin calcular bases, determine las dimensiones de Nul $A$, Col $A$, Col $A^T$ y Nul $A^T$.
+\begin{solucion}
+$B$ tiene 2 filas $L.D.$, es decir, 2 variables libres, por lo que $A$ también. Por esto,
+		$$dim(Nul\ A) = 2$$
+		Como $B$ tiene 3 pivotes, entonces $A$ también. Luego,
+		$$dim(Col\ A) = 3$$
+		Además, $B$ tiene 3 filas no nulas (pivotes), por lo que $A$ también. Estas filas serán el espacio fila de $A$ ($Fil\ A$), cuya dimensión es equivalente al espacio columna de $A^T$, por lo que
+		$$dim(Col\ A^T) = dim(Fil\ A) = 3$$
+		Por lo anterior, como $A^T$ tendrá 3 columnas pivotes, tendrá una variable libre, lo que implica
+		$$dim(Nul\ A^T) = 1$$
 \end{solucion}
 \end{preguntas}
 \end{document}
